test/grammar/failing/u_abstract_under_abstract.cfr
// Tests whether abstract clafers can be declared non-top level 
//
// Expected Output: ??
//
// Current Output:
//   C
//     D

abstract A
  abstract B
	 
C : A
D : B